--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "News"
     url: /#news
   - title: "Publications"
-    url: /#publications
+    url: /#selected-publications
   - title: "Contact"
     url: /#contact
 
