--- a/_config.yml
+++ b/_config.yml
@@ -111,11 +111,11 @@ author:
   avatar           : "/images/bio.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Ph.D. Candidate"
   # location         :  "Stony Brook, NY"
-  # email            : "tao@cs.stonybrook.edu"
+  email            : "tao@cs.stonybrook.edu"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: #mailto:tao@cs.stonybrook.edu
+      url: mailto:tao@cs.stonybrook.edu
     - label: "Google Scholar"
       icon: "fas fa-fw fa-link"
       url: "https://scholar.google.com/citations?user=izyo6gkAAAAJ&hl=zh-CN"
