--- a/_config.yml
+++ b/_config.yml
@@ -113,9 +113,9 @@ author:
   # location         :  "Stony Brook, NY"
   email            : "tao@cs.stonybrook.edu"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: mailto:tao@cs.stonybrook.edu
+    #- label: "Email"
+    #  icon: "fas fa-fw fa-envelope-square"
+    #  url: mailto:tao@cs.stonybrook.edu
     - label: "Google Scholar"
       icon: "fas fa-fw fa-link"
       url: "https://scholar.google.com/citations?user=izyo6gkAAAAJ&hl=zh-CN"
