--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ author:
   avatar           : "/images/bio.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Ph.D. Candidate"
   # location         :  "Stony Brook, NY"
-  email            : "tao@cs.stonybrook.edu"
+  # email            : "tao@cs.stonybrook.edu"
   links:
     #- label: "Email"
     #  icon: "fas fa-fw fa-envelope-square"
@@ -131,6 +131,9 @@ author:
     #- label: "Instagram"
     #  icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
+    - label: Linkedin
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/tao-tsun/"
 
 # Site Footer
 footer:
