--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
-#main:
+main:
 #  - title: "News"
 #    url: /#news
-#  - title: "Publications"
-#    url: /#selected-publications
-#  - title: "Contact"
-#    url: /#contact
+  - title: "Publications"
+    url: /selected-publications
+  - title: Experiences
+    url: /experiences
 
