reverse to previous verion

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
 #  - title: "News"
 #    url: /#news
-  - title: "Publications"
-    url: /selected-publications
-  - title: Experiences
-    url: /experiences
+#  - title: "Publications"
+#    url: /selected-publications/
+#  - title: Experiences
+#    url: /experiences/
 
