--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
-#  - title: "News"
-#    url: /#news
-#  - title: "Publications"
-#    url: /selected-publications/
-#  - title: Experiences
-#    url: /experiences/
+  - title: Home
+    url: /
+  - title: "Publications"
+    url: /publications/
+  - title: Experiences
+    url: /experiences/
 
